--- a/package.json
+++ b/package.json
@@ -10,11 +10,31 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@mui/material": "^6.4.8",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.1",
+    "antd": "^5.24.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.482.0",
     "next": "14.2.16",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "undici": "^7.5.0"
   },
   "devDependencies": {
