--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,7 +19,11 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@utils/*": ["src/app/_utils/*"], // _utils 以下をエイリアスで設定
+      "@hooks/*": ["src/app/_hooks/*"], // _utils 以下をエイリアスで設定
+      "@components/*": ["src/app/_components/*"], // _components 以下をエイリアスで設定
+      "@ui/*": ["src/app/_components/ui/*"] // ui 以下をエイリアスで設定
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
