--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.49.1",
     "antd": "^5.24.4",
@@ -35,6 +37,7 @@
     "next": "14.2.16",
     "next-auth": "^4.24.11",
     "react": "^18",
+    "react-day-picker": "^9.6.6",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "swr": "^2.3.3",
