--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "@hookform/resolvers": "^4.1.3",
     "@mui/material": "^6.4.8",
     "@prisma/client": "^6.6.0",
